2009-01-07  Dean Jackson  <dino@apple.com>

        Reviewed by Dan Bernstein.

        Added layout test for removing shorthand properties for
        animation, transition and transform origin.
        
        https://bugs.webkit.org/show_bug.cgi?id=22605

        * fast/css/transform-inline-style-remove-expected.txt: Added.
        * fast/css/transform-inline-style-remove.html: Added.

2009-01-07  Pierre-Olivier Latour  <pol@apple.com>

        Improve DRT API existence test in animation-test-helpers.js & transition-test-helpers.js.

        https://bugs.webkit.org/show_bug.cgi?id=23168

        * animations/animation-test-helpers.js:
        * transitions/transition-test-helpers.js:

2009-01-06  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Darin Adler.

        Added layout test for new DRT API numberOfActiveAnimations().

        https://bugs.webkit.org/show_bug.cgi?id=23126

        * animations/animation-controller-drt-api-expected.txt: Added.
        * animations/animation-controller-drt-api.html: Added.
        * platform/win/Skipped:

2009-01-06  Chris Marrin  <cmarrin@apple.com>

        Reviewed by David Hyatt.

        * animations/animation-test-helpers.js:
        (runAnimationTest.matrixStringToArray):
        (runAnimationTest.checkExpectedValue):
        * animations/simultaneous-start-left-expected.txt: Added.
        * animations/simultaneous-start-left.html: Added.
        * animations/simultaneous-start-transform-expected.txt: Added.
        * animations/simultaneous-start-transform.html: Added.

2009-01-06  Dean Jackson  <dino@apple.com>

        Reviewed by Dave Hyatt.

        Tests for Media Query extensions covering transitions,
        animations, transform-2d and transform-3d
        http://webkit.org/specs/MediaQueriesExtensions.html
        https://bugs.webkit.org/show_bug.cgi?id=22494

        * fast/media/mq-animation.html: Added.
        * fast/media/mq-transform-01.html: Added.