@@ -1,0 +1,10 @@
+This tests find with queries that contain line breaks, for text broken into paragraphs using brs, divs, and preserved newlines.
+test
+over
+brs
+test
+over
+divs
+test
+over
+newlines
