@@ -1648,9 +1648,7 @@ PassRefPtr<Range> findPlainText(const Range* range, const String& target, bool f
 {
     // We can't search effectively for a string that's entirely made of collapsible
     // whitespace, so we won't even try. This also takes care of the empty string case.
-    // FIXME: This code does not allow \n at the moment because of issues with <br>.
-    // Once we fix those, we can remove the specific check for \n.
-    if (isAllCollapsibleWhitespace(target) || target.contains('\n'))
+    if (isAllCollapsibleWhitespace(target))
         return collapsedToBoundary(range, forward);
 
     // First, find the text.
